# takoyaki

./: .gitignore  README.md  cabal.project  flake.nix  takoyaki.cabal
app/: Main.hs
src/Apps/: Todo.hs
src/Apps/HazardHunter/: DB.hs  Engine.hs  Main.hs
src/Apps/Memory/: DB.hs  Engine.hs  Main.hs
src/Apps/Seed/: DB.hs  Engine.hs  Main.hs
src/Takoyaki/: Engine.hs  Htmx.hs
