cabal-version:      2.4
name:               takoyaki
version:            0.1.0.0
homepage:           https://github.com/web-apps-top/takoyaki/README.md
bug-reports:        https://github.com/web-apps-top/takoyaki/issues
synopsis:           HTMX Playground
description:        HTMX PLayground
license-file:       LICENSE
author:             Fabien Boucher
maintainer:         web.apps.top@gmail.com
copyright:          2022 Fabien Boucher
extra-source-files:
    README.md

common common-options
    default-language: Haskell2010
    default-extensions: LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , NamedFieldPuns
                      , DeriveGeneric
                      , DataKinds
                      , OverloadedRecordDot
                      , QuasiQuotes
                      , TypeOperators
                      , TypeApplications
    ghc-options:      -Wall
                      -threaded

    build-depends:    base < 5

library
    import:           common-options
    exposed-modules:  Takoyaki.Htmx
                    , Takoyaki.Engine
                    , Apps.Todo
                    , Apps.HazardHunter.Main
                    , Apps.HazardHunter.Engine
                    , Apps.HazardHunter.DB
                    , Apps.Memory.Main
                    , Apps.Memory.Engine
                    , Apps.Memory.DB
                    , Apps.Seed.Main
                    , Apps.Seed.Engine
                    , Apps.Seed.DB
    build-depends:    servant
                    , servant-lucid
                    , servant-server
                    , servant-websockets
                    , servant-xstatic
                    , servant-auth-server
                    , aeson
                    , async
                    , bytestring
                    , base64-bytestring
                    , containers
                    , cookie
                    , lucid
                    , lucid-xstatic
                    , directory
                    , fast-logger
                    , filepath
                    , file-embed
                    , ki
                    , lens
                    , lens-aeson
                    , text
                    , time
                    , mtl
                    , random
                    , random-shuffle
                    , safe-exceptions
                    , sqlite-simple
                    , stm
                    , serialise
                    , string-interpolate
                    , hashable
                    , http-api-data
                    , unordered-containers
                    , uuid
                    , vector
                    , wai
                    , wai-logger
                    , warp
                    , websockets
                    , witch
                    , xstatic
                    , xstatic-htmx
                    , xstatic-tailwind
    hs-source-dirs:   src

executable takoyaki
    import:           common-options
    main-is:          Main.hs

    build-depends:    takoyaki

    hs-source-dirs:   app
    default-language: Haskell2010
